# centric-api

./: .gitignore  README.md  justfile  pyproject.toml
config/: bundle.example.yml  bundle.yml  delta.example.yml  download.example.yml  download.yml  endpoint-schema.yml  fetcher.yml  load.yml  units.yml  views.yml
deploy/systemd/: centric-api-fetch.service  centric-api-fetch.timer  centric-api.env.example
docs/: architecture.md  cli.md  configuration.md  deployment.md  load.md  modeling.md  operations.md  snapshot.md  units.md  validation.md  views.md
docs/adr/: 0001-raw-evidence-source-of-truth.md  0002-fetch-delta-checkpoints.md  0003-changelog-event-history.md  0004-validation-extension-contract.md
scripts/git-hooks/: pre-commit
src/centric_api/: artifact_names.py  auth.py  bundle.py  bundle_artifacts.py  bundle_config.py  bundle_state.py  changelog.py  cli.py  cli_output.py  cli_parser.py  config.py  db_schema.py  defaults.py  delta.py  download.py  download_config.py  download_http.py  download_selection.py  download_state.py  endpoint_map.py  fetch_checkpoint.py  fetch_common.py  fetch_delta_state.py  fetch_manifest.py  fetch_pagination.py  fetcher.py  load.py  load_config.py  models.py  raw_evidence.py  raw_lifecycle.py  (+13 more)
tests/: helpers_changelog.py  helpers_cli.py  helpers_download.py  helpers_load.py  helpers_load_workflows.py  helpers_swagger.py  helpers_validation.py  helpers_view.py  test_artifact_names.py  test_auth.py  test_bundle.py  test_changelog.py  test_changelog_prune.py  test_changelog_queries.py  test_changelog_recording.py  test_cli.py  test_cli_bundle_download.py  test_cli_changelog.py  test_cli_core.py  test_cli_fetch_cron.py  test_cli_health.py  test_cli_ingest.py  test_config_paths.py  test_config_schema_store.py  test_download.py  test_download_http.py  test_download_selection.py  test_download_state.py  test_endpoint_map.py  test_endpoint_schema.py  test_fetch.py  test_fetch_config.py  test_load.py  test_load_cli.py  test_load_cli_basic.py  test_load_cli_material_composition.py  test_load_cli_private_workflows.py  test_load_cli_style_bom.py  test_load_cli_supplier_quote.py  test_load_materialize.py  (+28 more)
(+115 files in other folders)
