[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "centric-api"
version = "0.1.0"
description = "Centric API local data toolkit for Centric records and documents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "croniter>=6.2.2",
  "httpx>=0.27.0",
  "openpyxl>=3.1.5",
  "PyYAML>=6.0.2",
]

[project.scripts]
centric-api = "centric_api.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/centric_api"]

[tool.hatch.build.targets.wheel.force-include]
"config/bundle.yml" = "centric_api/default_config/bundle.yml"
"config/download.yml" = "centric_api/default_config/download.yml"
"config/endpoint-schema.yml" = "centric_api/default_config/endpoint-schema.yml"
"config/fetcher.yml" = "centric_api/default_config/fetcher.yml"
"config/load.yml" = "centric_api/default_config/load.yml"
"config/units.yml" = "centric_api/default_config/units.yml"
"config/views.yml" = "centric_api/default_config/views.yml"
"src/centric_api/templates/endpoint-map.html" = "centric_api/templates/endpoint-map.html"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
